2003-11-24	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* custom/HPUX9-posix.cfg: Remove INLINE, INLINE_UPCASE.
	* custom/default.cfg: Remove INLINE,INLINE_UPCASE.

2003-09-26	Joel Sherrill <joel@OARcorp.com>

	* custom/simhppa.cfg: Removed.

2003-09-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	custom/ppcn_60x.cfg: Remove -fvolatile-global -fvolatile from CFLAGS.

2003-08-23	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	PR 470/bsps
	* custom/mcp750.cfg, custom/mtx603e.cfg, custem/mvme2307.cfg (make-exe): 
	Rearrange arguments in calls to OBJCOPY to $(OBJCOPY) options infile outfile.
	(Reported for mcp750.cfg by Andrew Harris <Andrew.Harris@jhuapl.edu>).

2003-08-20 	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* custom/mvme167.cfg: Remove PRINTK_MINOR, CONSOLE_MINOR (move to
	the BSP's configure-script).
	Remove BSP_CPPFLAGS (Obsolete).

2003-06-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	PR 321/bsps
	* leaf.cfg: Remove support for profile-variant.
	* main.cfg: Ditto.
	* compilers/gcc-no_bsp.cfg: Ditto.
	* compilers/gcc-portsw.cfg: Ditto.
	* compilers/gcc-target-default.cfg: Ditto.

2003-05-27	Ralf Corsepius	<corsepiu@faw.uni-ulm.de>

	* custom/mvme2307.cfg: Remove CFLAGS_PROFILE_V.

2003-03-25	Thomas Doerfler <Thomas.Doerfler@imd-systems.de>

	PR 368/filesystems
	* custom/mbx821_002.cfg, custom/mbx821_002b.cfg: New files included
	with this PR for alias BSPs.

2003-03-18  Till Straumann <strauman@slac.stanford.edu>

	PR 356/bsps
	* custom/mvme2307.cfg: This patch makes RTEMS/PowerPC eabi compliant.
	Enable EABI by adding -meabi -msdata=eabi CFLAGS.

2003-03-10	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* custom/ppcn_60x.cfg: Fix mal-formed CVS-Id.

2003-02-26	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* custom/armulator.cfg: CPU_CFLAGS = -msoft-float.
	* custom/vegaplus.cfg: CPU_CFLAGS = -msoft-float.
	* custom/ebd7312.cfg: CPU_CFLAGS = -msoft-float.
	* custom/arm_bare_bsp.cfg: CPU_CFLAGS += -msoft-float.

2003-02-14	Joel Sherrill <joel@OARcorp.com>
