@@ -1,23 +1,0 @@
-##
-## $Id$
-##
-
-
-rtems_makedir = $(prefix)/make
-rtems_make_customdir = $(rtems_makedir)/custom
-
-rtems_make_custom_DATA = default.cfg
-
-EXTRA_DIST = Cygwin-posix.cfg FreeBSD-posix.cfg HPUX9-posix.cfg \
-    Linux-posix.cfg Solaris-posix.cfg bare.cfg cvme961.cfg dmv152.cfg \
-    dmv177.cfg efi332.cfg efi68k.cfg erc32.cfg erc32nfp.cfg eth_comm.cfg \
-    gen68302.cfg gen68340.cfg gen68360.cfg gen68360_040.cfg gensh1.cfg \
-    helas403.cfg i386ex.cfg idp.cfg jmr3904.cfg leon1.cfg leon2.cfg \
-    mcp750.cfg mvme136.cfg mvme147.cfg mvme147s.cfg \
-    mvme162.cfg mvme162lx.cfg mvme167.cfg mvme2307.cfg no_bsp.cfg \
-    ods68302.cfg p4000.cfg p4600.cfg p4650.cfg pc386.cfg \
-    portsw.cfg posix.cfg ppcn_60x.cfg psim.cfg score603e.cfg shsim.cfg \
-    simhppa.cfg ts_386ex.cfg
-
-## -------------------------------------------------------
-include $(top_srcdir)/automake/host.am
